# spark_noetic

./: NOTICE  README.md  onekey.sh
doc/: install.sh  install_3iroboticslidar2.sh  install_eai_g2.sh  install_eai_g6.sh
doc/rules/: orbbec-usb.rules
src/3rd_app/move2grasp/launch/: move2grasp.launch  teleop2grasp.launch
src/3rd_app/move2grasp/rviz/: spark_gmapping_astrapro.rviz  spark_gmapping_d435.rviz
src/3rd_app/move2grasp/scripts/: grasp.py  grasp_d435.py  grasp_pro.py  grasp_pro_new.py  move.py  teleop.py
src/3rd_app/spark_teatask/spark_fetchtea/: package.xml
src/cv_tutorial/src/: cv_tutorial.cpp
src/spark/spark_bringup/launch/: driver_bringup.launch
src/spark/spark_teleop/: CMakeLists.txt  package.xml
src/spark/spark_test/: CMakeLists.txt  package.xml
src/spark_app/camera_calibrator/: package.xml
src/spark_app/spark_carry/: CMakeLists.txt
src/spark_app/spark_navigation/: package.xml
src/spark_app/spark_sagittarius_carry/: CMakeLists.txt  package.xml
src/spark_driver/arm/sagittarius_arm_ros/sagittarius_demo/sagittarius_puppet_control/: CMakeLists.txt  package.xml
src/spark_driver/arm/sagittarius_arm_ros/sagittarius_demo/sagittarius_puppet_control/bag/: 5s.sh  record1.bag  wx250s_commands.bag
src/spark_driver/arm/sagittarius_arm_ros/sagittarius_demo/sagittarius_puppet_control/launch/: puppet_control_s1.launch  puppet_control_s2.launch  puppet_control_s3.launch  puppet_control_s4.launch  puppet_control_s5.launch  puppet_control_single.launch  rosbag_play.launch
src/spark_driver/arm/sagittarius_arm_ros/sagittarius_demo/sagittarius_puppet_control/rviz/: puppet_config.rviz
src/spark_driver/arm/sagittarius_arm_ros/sagittarius_demo/sagittarius_puppet_control/scripts/: rosbag_play.sh
src/spark_driver/arm/sagittarius_arm_ros/sagittarius_demo/sagittarius_puppet_control/src/: puppet_control_node.cpp  puppet_control_single_node.cpp
src/spark_driver/arm/sagittarius_arm_ros/sagittarius_descriptions/: CMakeLists.txt  package.xml  urdf.rviz
src/spark_driver/arm/sagittarius_arm_ros/sagittarius_descriptions/config/: joint_names_sagittarius_descriptions.yaml
src/spark_driver/arm/sagittarius_arm_ros/sagittarius_descriptions/launch/: description.launch  display.launch  gazebo.launch
src/spark_driver/arm/sagittarius_arm_ros/sagittarius_descriptions/meshes/: link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link_grasping_frame.STL  link_gripper_left.STL  link_gripper_right.STL  sagittarius_base_link.STL
src/spark_driver/arm/sagittarius_arm_ros/sagittarius_descriptions/rviz/: description.rviz
src/spark_driver/arm/sagittarius_arm_ros/sagittarius_descriptions/urdf/: sagittarius_descriptions.csv  sgr532.urdf.xacro  spark_sgr_external.urdf.xacro
(+188 files in other folders)
