<package format="2">
  <name>sagittarius_descriptions</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for sagittarius_descriptions</p>
    <p>This package contains configuration data, 3D models and launch files
for sagittarius_descriptions robot</p>
  </description>
  <author>litian.zhuang</author>
  <maintainer email="litian.zhuang@nxrobo.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>